examples/test/testpolicy16167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16167
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key41: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value0
          key4: value34
      podSelector:
        matchLabels:
          key7: value14
          key37: value22
          key23: value37
